[package]
name = "deno_markdown_wasm"
description = "Deno WebAssembly module by Rust"
version = "0.1.0"
authors = ["linux_china <libing.chen@gmail.com>"]
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.68"
wee_alloc = { version = "0.4.5", optional = true }
pulldown-cmark = { version = "0.8.0", default-features = false }

[profile.release]
lto = true
opt-level = "z"

[features]
default = ["wee_alloc"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
